# onicalc

./: LICENSE  README.md  food.py  oni.py  setup.cfg
onicalc/: __init__.py  food.py  onicalc.py
tests/: test.py
