[metadata]
name = onicalc
version = 1.0
author = Pete Buffon
author_email = pabuffon@gmail.com
description = Python Library of various calculators for ONI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/petebuffon/oni
project_urls =
	Bug Tracker = https://github.com/petebuffon/oni/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = find:
python_version >= 3.8
